# TiledCUDA

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  Makefile  README.md
cmake/: Dependencies.cmake  dependencies.cmake
docs/: data_transfer_between_memory_hierarchy.md  data_transfer_between_shared_and_register.md
examples/: scatter_nd.py
examples/cpp/01_gemm/: CMakeLists.txt  Makefile  util.hpp
examples/cpp/01_gemm/01_gemm_global_reg/: gemm.hpp  main.cu
examples/cpp/01_gemm/02_gemm_all_mem/: gemm.hpp  main.cu
examples/cpp/02_fused_two_gemms/: CMakeLists.txt  b2b_gemm.hpp  fused_gemm.cu  fused_gemm.hpp  fused_gemm.tsv  util.hpp
examples/cpp/03_flash_attention/: CMakeLists.txt  flash_attn.cu  flash_attn.hpp  util.hpp
examples/cpp/b2b_gemm/: CMakeLists.txt  b2b_gemm.cu  b2b_gemm.hpp  util.hpp
examples/cpp/flash_attn/: CMakeLists.txt  flash_attn.cu  flash_attn_cpu.hpp  util.hpp
examples/cpp/gemm/: CMakeLists.txt  gemm.cu  gemm.hpp  main.cu  util.hpp
examples/gemm/: CMakeLists.txt  gemm.cu  util.hpp
examples/python/gemm/: .gitignore  A600.tsv  README.md  compile.py  entry.py  gemm.py  main.py
examples/python/gemm/csrc/: kernel.h
include/: config.hpp  cuda_info.hpp  cuda_utils.hpp  errors.hpp  layout.hpp
include/cell/: acc.hpp  convert.hpp  copy.hpp  gemm.hpp  mod.hpp  sync.hpp  tile_shape.hpp  warp.hpp
include/cell/compute/: base.hpp  broadcast.hpp  elementwise.hpp  gemm.hpp  map.hpp  math_functor.hpp  mod.hpp  reduce.hpp  softmax.hpp
include/cell/copy/: constants.hpp  copy.hpp  copy_atom.hpp  dyn_copy.hpp  global_to_register.hpp  global_to_shared.hpp  global_to_shared_2.hpp  mod.hpp  register.hpp  shared_to_register.hpp  static_copy.hpp  tile_transfer_base.hpp  warp.hpp
include/cell/traits/: b2b_gemm.hpp  base.hpp  batched_gemm.hpp  bmm.hpp  copy.hpp  gemm.hpp  lstm.hpp  mod.hpp
include/kernels/: batched_gemm.hpp  cute_b2b_gemm.hpp  cute_gemm.hpp  flash_attn.hpp  gemm.hpp  lstm_cell.hpp  mod.hpp  scatter_nd.hpp
include/types/: base.hpp  base_tile.hpp  common.hpp  device_array.hpp  global.hpp  global_tile_iterator.hpp  layout.hpp  mod.hpp  register.cuh  register.hpp  register_tile.hpp  shared.cuh  shared.hpp  shared_tile_iterator.hpp  tile_iterator.hpp  tile_shape.hpp  types.cuh  types.hpp
include/util/: cuda_timer.hpp  debug.hpp  print.hpp
pytiledcuda/: __init__.py
scripts/: clang_format.hook
scripts/cmake/: dependencies.cmake  generic.cmake
scripts/cmake/public/: glog.cmake
scripts/unittests/: python.sh  run_all_cpp_test.sh  run_all_cpp_tests.sh
src/: CMakeLists.txt  cuda_info.cc  cuda_utils.cc  registers.cc  torch_bind.cc
src/cell/: copy.cc
src/cell/copy/: dyn_copy.cc
src/kernels/: b2b_gemm.cu  batched_gemm.cu  bmm.cu  cute_b2b_gemm.cu  cute_gemm.cu  flash_attn.cu  gemm.cu  lstm_cell.cu  scatter_nd.cu
tests/cpp/: CMakeLists.txt  test_unit.cc  tiled_cuda_test.h
tests/cpp/cell/: test_b2b_gemm.cu  test_broadcast.cu  test_copy.cc  test_copy.cu  test_device_array.cu  test_flash_attn.cu  test_flash_attn_reduce.cu  test_g2r_copy.cu  test_g2s_copy.cu  test_g2s_copy_2.cu  test_g2s_load.cu  test_g2s_load_cute.cu  test_gemm.cu  test_gemm_utils.hpp  test_global_tile_iterator.cu  test_layout.cu  test_reduce.cu  test_register_tile.cu  test_s2f_copy.cu  test_s2r_copy.cu  test_single_wmma.cu  test_softmax.cu  test_swizzled_copy.cu  test_swizzled_layout.cu  test_tile.cu  test_tile_iterator.cu  test_wmma.cu
tests/cpp/common/: test_utils.cc  test_utils.hpp
tests/cpp/kernels/: test_gemm.cu  test_scatter_nd.cu
tests/python/: context.py  test_back2back_gemm.py  test_batched_gemm.py  test_flash_attn.py  test_gemm.py  test_lstm_cell.py  test_scatter_nd.py
